cmake_minimum_required(VERSION 3.13)
set(project_name dma_for_teensy)
project(${project_name})

set(CMAKE_CXX_STANDARD 14)
set(TeensyDir C:/Users/Ali/AppData/Local/Arduino15/packages/teensy/hardware/avr/1.58.1/cores/teensy3)

add_executable(${project_name}
        DmaTeensy3_6.ino
        DmaSerialTeensy.cpp DmaSerialTeensy.h

        ${TeensyDir}/analog.c
        ${TeensyDir}/Arduino.h
        ${TeensyDir}/arm_common_tables.h
        ${TeensyDir}/arm_math.h
        ${TeensyDir}/AudioStream.cpp
        ${TeensyDir}/AudioStream.h
        ${TeensyDir}/avr_emulation.cpp
        ${TeensyDir}/avr_emulation.h
        ${TeensyDir}/avr_functions.h
        ${TeensyDir}/binary.h
        ${TeensyDir}/Client.h
        ${TeensyDir}/core_cm4.h
        ${TeensyDir}/core_cm4_simd.h
        ${TeensyDir}/core_cmInstr.h
        ${TeensyDir}/core_id.h
        ${TeensyDir}/core_pins.h
        ${TeensyDir}/CrashReport.cpp
        ${TeensyDir}/CrashReport.h
        ${TeensyDir}/DMAChannel.cpp
        ${TeensyDir}/DMAChannel.h
        ${TeensyDir}/eeprom.c
        ${TeensyDir}/elapsedMillis.h
        ${TeensyDir}/EventResponder.cpp
        ${TeensyDir}/EventResponder.h
        ${TeensyDir}/FS.h
        ${TeensyDir}/HardwareSerial.cpp
        ${TeensyDir}/HardwareSerial.h
        ${TeensyDir}/HardwareSerial1.cpp
        ${TeensyDir}/HardwareSerial2.cpp
        ${TeensyDir}/HardwareSerial3.cpp
        ${TeensyDir}/HardwareSerial4.cpp
        ${TeensyDir}/HardwareSerial5.cpp
        ${TeensyDir}/HardwareSerial6.cpp
        ${TeensyDir}/inplace_function.h
        ${TeensyDir}/IntervalTimer.cpp
        ${TeensyDir}/IntervalTimer.h
        ${TeensyDir}/IPAddress.cpp
        ${TeensyDir}/IPAddress.h
        ${TeensyDir}/Keyboard.h
        ${TeensyDir}/keylayouts.c
        ${TeensyDir}/keylayouts.h
        ${TeensyDir}/kinetis.h
        ${TeensyDir}/main.cpp
        ${TeensyDir}/Makefile
        ${TeensyDir}/math_helper.c
        ${TeensyDir}/math_helper.h
        ${TeensyDir}/memcpy-armv7m.S
        ${TeensyDir}/memset.S
        ${TeensyDir}/MIDIUSB.h
        ${TeensyDir}/mk20dx128.c
        ${TeensyDir}/mk20dx128.h
        ${TeensyDir}/mk20dx128.ld
        ${TeensyDir}/mk20dx256.ld
        ${TeensyDir}/mk64fx512.ld
        ${TeensyDir}/mk66fx1m0.ld
        ${TeensyDir}/mkl26z64.ld
        ${TeensyDir}/Mouse.h
        ${TeensyDir}/new.cpp
        ${TeensyDir}/new.h
        ${TeensyDir}/nonstd.c
        ${TeensyDir}/pgmspace.h
        ${TeensyDir}/pins_arduino.h
        ${TeensyDir}/pins_teensy.c
        ${TeensyDir}/Print.cpp
        ${TeensyDir}/Print.h
        ${TeensyDir}/Printable.h
        ${TeensyDir}/ser_print.c
        ${TeensyDir}/ser_print.h
        ${TeensyDir}/serial1.c
        ${TeensyDir}/serial1_doughboy.txt
        ${TeensyDir}/serial2.c
        ${TeensyDir}/serial3.c
        ${TeensyDir}/serial4.c
        ${TeensyDir}/serial5.c
        ${TeensyDir}/serial6.c
        ${TeensyDir}/serial6_lpuart.c
        ${TeensyDir}/serialEvent.cpp
        ${TeensyDir}/serialEvent1.cpp
        ${TeensyDir}/serialEvent2.cpp
        ${TeensyDir}/serialEvent3.cpp
        ${TeensyDir}/serialEvent4.cpp
        ${TeensyDir}/serialEvent5.cpp
        ${TeensyDir}/serialEvent6.cpp
        ${TeensyDir}/serialEventUSB1.cpp
        ${TeensyDir}/serialEventUSB2.cpp
        ${TeensyDir}/Server.h
        ${TeensyDir}/SPIFIFO.h
        ${TeensyDir}/Stream.cpp
        ${TeensyDir}/Stream.h
        ${TeensyDir}/Time.cpp
        ${TeensyDir}/Tone.cpp
        ${TeensyDir}/touch.c
        ${TeensyDir}/Udp.h
        ${TeensyDir}/usb_audio.cpp
        ${TeensyDir}/usb_audio.h
        ${TeensyDir}/usb_desc.c
        ${TeensyDir}/usb_desc.h
        ${TeensyDir}/usb_dev.c
        ${TeensyDir}/usb_dev.h
        ${TeensyDir}/usb_flightsim.cpp
        ${TeensyDir}/usb_flightsim.h
        ${TeensyDir}/usb_inst.cpp
        ${TeensyDir}/usb_joystick.c
        ${TeensyDir}/usb_joystick.h
        ${TeensyDir}/usb_keyboard.c
        ${TeensyDir}/usb_keyboard.h
        ${TeensyDir}/usb_mem.c
        ${TeensyDir}/usb_mem.h
        ${TeensyDir}/usb_midi.c
        ${TeensyDir}/usb_midi.h
        ${TeensyDir}/usb_mouse.c
        ${TeensyDir}/usb_mouse.h
        ${TeensyDir}/usb_mtp.c
        ${TeensyDir}/usb_mtp.h
        ${TeensyDir}/usb_names.h
        ${TeensyDir}/usb_rawhid.c
        ${TeensyDir}/usb_rawhid.h
        ${TeensyDir}/usb_seremu.c
        ${TeensyDir}/usb_seremu.h
        ${TeensyDir}/usb_serial.c
        ${TeensyDir}/usb_serial.h
        ${TeensyDir}/usb_serial2.c
        ${TeensyDir}/usb_serial2.h
        ${TeensyDir}/usb_serial3.c
        ${TeensyDir}/usb_serial3.h
        ${TeensyDir}/usb_touch.c
        ${TeensyDir}/usb_touch.h
        ${TeensyDir}/usb_undef.h
        ${TeensyDir}/WCharacter.h
        ${TeensyDir}/WConstants.h
        ${TeensyDir}/wiring.h
        ${TeensyDir}/wiring_private.h
        ${TeensyDir}/WMath.cpp
        ${TeensyDir}/WProgram.h
        ${TeensyDir}/WString.cpp
        ${TeensyDir}/WString.h
        ${TeensyDir}/yield.cpp

        )

include_directories(${TeensyDir})
add_definitions(-D__MK66FX1M0__ -DTEENSYDUINO=148 -DF_CPU=180000000 -D__cplusplus)


